--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,9 +4,24 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
-	<title>Svelte app</title>
+	<title>I WANT TO BE A SUPERHERO</title>
+	<!-- HTML Meta Tags -->
+	<meta name="description" content="An exploration into AI colour space">
 
-	<link rel='icon' type='image/png' href='./favicon.png'>
+	<!-- Facebook Meta Tags -->
+	<meta property="og:url" content="ft0.ch/superhero">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="I WANT TO BE A SUPERHERO">
+	<meta property="og:description" content="An exploration into AI colour space">
+	<meta property="og:image" content="https://ft0.ch/superhero/og.jpg">
+
+	<!-- Twitter Meta Tags -->
+	<meta property="twitter:url" content="ft0.ch/superhero">
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="I WANT TO BE A SUPERHERO">
+	<meta name="twitter:description" content="An exploration into AI colour space">
+	<meta name="twitter:image" content="https://ft0.ch/superhero/og.jpg">
+
 	<link rel='stylesheet' href='./global.css'>
 	<link rel='stylesheet' href='./build/bundle.css'>
 
